add JPMS support