@@ -98,7 +98,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>[2.14,)</version>
+            <version>[2.15,)</version>
         </dependency>
 
 		<dependency>
@@ -137,7 +137,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.5.0</version>
+					<version>3.6.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -158,9 +158,7 @@
 		</pluginManagement>
 
 		<plugins>
-
             <plugin>
-                <!-- use latest to get JDK 9 working -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
             </plugin>
@@ -168,26 +166,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgs>
-						<arg>-XX:+IgnoreUnrecognizedVMOptions</arg>
-                        <arg>--add-modules</arg>
-						<!-- don't add java.se.ee module, instead pull in individual modules such as java.xml.bind, java.transaction, etc -->
-						<arg>java.xml.bind</arg>
-                        <arg>--illegal-access=permit</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
 
             <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <!-- The latest surefire plugin (v2.20.1) will add java.se.ee by default which pulls in java.xml.bind, java.transaction, etc -->
-                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/java9.html -->
-				<!-- we don't actually want all of java.se.ee so we overide the default args -->
-<!--				<configuration>-->
-<!--					<argLine>-XX:+IgnoreUnrecognizedVMOptions &#45;&#45;add-modules=java.xml.bind &#45;&#45;illegal-access=permit</argLine>-->
-<!--				</configuration>-->
             </plugin>
 
             <plugin>
@@ -198,9 +181,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>-XX:+IgnoreUnrecognizedVMOptions --add-modules=java.xml.bind --illegal-access=permit</jvmArguments>
-                </configuration>
 			</plugin>
 
 			<plugin>
@@ -213,7 +193,7 @@
                         <plugin>jpa</plugin>
 					</compilerPlugins>
                     <pluginOptions>
-                        <option>jpa:annotation=javax.persistence.Entity</option>
+                        <option>jpa:annotation=jakarta.persistence.Entity</option>
                     </pluginOptions>
 					<jvmTarget>${java.version}</jvmTarget>
 				</configuration>
@@ -248,6 +228,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
